--- a/ArjunaCore/docs/pom.xml
+++ b/ArjunaCore/docs/pom.xml
@@ -13,13 +13,13 @@
 		if not, write to the Free Software Foundation, Inc., 51 Franklin Street, 
 		Fifth Floor, Boston, MA 02110-1301, USA. (C) 2009, @author JBoss Inc. (jonathan.halliday@redhat.com) -->
   <parent>
-    <groupId>org.jboss.narayana.documentation</groupId>
+    <groupId>org.jboss.jbossts.documentation</groupId>
     <artifactId>narayana-documentation</artifactId>
-    <version>5.0.0.M2-SNAPSHOT</version>
+    <version>4.17.0.Final-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.jboss.narayana.documentation.core</groupId>
+  <groupId>org.jboss.jbossts.documentation.core</groupId>
   <artifactId>arjunacore-docs</artifactId>
   <name>ArjunaCore Documentation</name>
   <description>arjunacore docs</description>
