--- a/ArjunaJTA/docs/quick_start_guide/pom.xml
+++ b/ArjunaJTA/docs/quick_start_guide/pom.xml
@@ -13,9 +13,9 @@
 	Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <groupId>org.jboss.narayana.documentation.jta</groupId>
+    <groupId>org.jboss.jbossts.documentation.jta</groupId>
     <artifactId>narayana-jta-docs</artifactId>
-    <version>5.0.0.M2-SNAPSHOT</version>
+    <version>4.17.0.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
