--- a/blacktie/docs/pom.xml
+++ b/blacktie/docs/pom.xml
@@ -13,13 +13,13 @@
 		Fifth Floor, Boston, MA 02110-1301, USA. (C) 2009, @author JBoss Inc. (jonathan.halliday@redhat.com) -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-    <groupId>org.jboss.narayana.documentation</groupId>
+    <groupId>org.jboss.jbossts.documentation</groupId>
     <artifactId>narayana-documentation</artifactId>
-    <version>5.0.0.M2-SNAPSHOT</version>
+    <version>4.17.0.Final-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-        <groupId>org.jboss.narayana.documentation.blacktie</groupId>
+        <groupId>org.jboss.jbossts.documentation.blacktie</groupId>
     <artifactId>blacktie-docs</artifactId>
     <packaging>pom</packaging>
     <name>BlackTie guides</name>
