--- a/XTS/background/pom.xml
+++ b/XTS/background/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.jboss.jbossts.documentation</groupId>
     <artifactId>narayana-documentation</artifactId>    
-    <version>4.17.4.Final</version>
+    <version>4.17.5.Final-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
