--- a/ArjunaCore/docs/development_guide/pom.xml
+++ b/ArjunaCore/docs/development_guide/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.jboss.jbossts.documentation.core</groupId>
     <artifactId>arjunacore-docs</artifactId>
-    <version>4.17.15.Final</version>
+    <version>4.17.16.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
