--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
       <id>tomjenkinson</id>
       <name>Tom Jenkinson</name>
       <email>tom.jenkinson@redhat.com</email>
-      <organization>FOO</organization>
+      <organization>2FOO</organization>
       <organizationUrl>http://www.jboss.org/</organizationUrl>
       <roles>
         <role>project lead</role>
