--- a/blacktie/docs/userguide/pom.xml
+++ b/blacktie/docs/userguide/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>org.jboss.jbossts.documentation.blacktie</groupId>
         <artifactId>blacktie-docs</artifactId>
-        <version>4.17.17.Final</version>
+        <version>4.17.18.Final-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
