--- a/ArjunaJTS/docs/quick_start_guide/pom.xml
+++ b/ArjunaJTS/docs/quick_start_guide/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.jboss.jbossts.documentation.jts</groupId>
     <artifactId>narayana-jts-docs</artifactId>
-    <version>4.17.26.Final</version>
+    <version>4.17.27.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
