--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.jbossts.documentation</groupId>
   <artifactId>narayana-documentation</artifactId>
-  <version>4.17.26.Final</version>
+  <version>4.17.27.Final-SNAPSHOT</version>
   <packaging>pom</packaging>
   <url>http://www.jboss.org/jbosstm/</url>
   <name>${project.artifactId}</name>
