--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <!-- JBoss, Home of Professional Open Source Copyright 2009, Red Hat Middleware
-          LLC, and individual contributors as indicated by the @author tags. See the
-          copyright.txt in the distribution for a full listing of individual contributors.
-          This copyrighted material is made available to anyone wishing to use, modify,
-          copy, or redistribute it subject to the terms and conditions of the GNU Lesser
-          General Public License, v. 2.1. This program is distributed in the hope that
-          it will be useful, but WITHOUT A WARRANTY; without even the implied warranty
-          of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser
-          General Public License for more details. You should have received a copy
-          of the GNU Lesser General Public License, v.2.1 along with this distribution;
-          if not, write to the Free Software Foundation, Inc., 51 Franklin Street,
-          Fifth Floor, Boston, MA 02110-1301, USA. (C) 2009, @author JBoss Inc. (jonathan.halliday@redhat.com) -->
+  <!--
+    Copyright The Narayana Authors
+    SPDX short identifier: Apache-2.0
+   -->
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.documentation</groupId>
   <artifactId>narayana-documentation</artifactId>
@@ -22,8 +15,9 @@
   <url>http://www.jboss.org/jbosstm/</url>
   <licenses>
     <license>
-      <name>LGPL 2.1</name>
-      <url>http://www.gnu.org/licenses/lgpl-2.1.html</url>
+      <name>Apache-2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.html</url>
+      <distribution>repo</distribution>
     </license>
   </licenses>
   <developers>
