--- a/project/pom.xml
+++ b/project/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jboss.narayana.documentation</groupId>
     <artifactId>narayana-documentation</artifactId>
-    <version>6.0.2.Final</version>
+    <version>7.0.1.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
