--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.documentation</groupId>
   <artifactId>narayana-documentation</artifactId>
-  <version>6.0.3.Final-SNAPSHOT</version>
+  <version>6.0.2.Final</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
   <description>${project.artifactId}</description>
