--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <!--
-    Copyright The Narayana Authors
-    SPDX short identifier: Apache-2.0
-   -->
-
+<!-- Copyright The Narayana Authors
+SPDX short identifier: Apache-2.0 -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>org.jboss.narayana.documentation</groupId>
   <artifactId>narayana-documentation</artifactId>
-  <version>7.0.3.Final-SNAPSHOT</version>
+  <version>7.0.2.Final-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
   <description>${project.artifactId}</description>
-  <url>http://www.jboss.org/jbosstm/</url>
+
   <licenses>
     <license>
       <name>Apache-2.0</name>
@@ -20,119 +18,23 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
-  <developers>
-    <developer>
-      <id>nmcl</id>
-      <name>Mark Little</name>
-      <email>mlittle@redhat.com</email>
-      <organization>JBoss</organization>
-      <organizationUrl>http://www.jboss.org/</organizationUrl>
-      <roles>
-        <role>JBoss CTO</role>
-      </roles>
-      <timezone>0</timezone>
-    </developer>
-    <developer>
-      <id>tomjenkinson</id>
-      <name>Tom Jenkinson</name>
-      <email>tom.jenkinson@redhat.com</email>
-      <organization>JBoss</organization>
-      <organizationUrl>http://www.jboss.org/</organizationUrl>
-      <roles>
-        <role>project lead</role>
-      </roles>
-      <timezone>0</timezone>
-    </developer>
-    <developer>
-      <id>paulrobinson</id>
-      <name>Paul Robinson</name>
-      <email>paul.robinson@redhat.com</email>
-      <organization>JBoss</organization>
-      <organizationUrl>http://www.jboss.org/</organizationUrl>
-      <roles>
-        <role>xts lead</role>
-      </roles>
-      <timezone>0</timezone>
-    </developer>
-    <developer>
-      <id>mmusgrov</id>
-      <name>Michael Musgrove</name>
-      <email>mmusgrov@redhat.com</email>
-      <organization>JBoss</organization>
-      <organizationUrl>http://www.jboss.org/</organizationUrl>
-      <roles>
-        <role>Core Developer</role>
-      </roles>
-      <timezone>0</timezone>
-    </developer>
-    <developer>
-      <id>zhfeng</id>
-      <name>Amos Feng</name>
-      <email>zfeng@redhat.com</email>
-      <organization>JBoss</organization>
-      <organizationUrl>http://www.jboss.org/</organizationUrl>
-      <roles>
-        <role>Core Developer</role>
-      </roles>
-      <timezone>0</timezone>
-    </developer>
-    <developer>
-      <id>istudens</id>
-      <name>Ivo Studensky</name>
-      <email>istudens@redhat.com</email>
-      <organization>JBoss</organization>
-      <organizationUrl>http://www.jboss.org/</organizationUrl>
-      <roles>
-        <role>QA lead</role>
-      </roles>
-      <timezone>0</timezone>
-    </developer>
-    <developer>
-      <id>jhalliday</id>
-      <name>Jonathan Halliday</name>
-      <email>jonathan.halliday@redhat.com</email>
-      <organization>JBoss</organization>
-      <organizationUrl>http://www.jboss.org/</organizationUrl>
-      <timezone>0</timezone>
-    </developer>
-    <developer>
-      <id>adinn</id>
-      <name>Andrew Dinn</name>
-      <email>adinn@redhat.com</email>
-      <organization>JBoss</organization>
-      <organizationUrl>http://www.jboss.org/</organizationUrl>
-      <timezone>0</timezone>
-    </developer>
-  </developers>
-  <modules>
-    <module>product</module>
-    <module>project</module>
-  </modules>
+
   <scm>
     <connection>scm:git:git@github.com:jbosstm/narayana.git</connection>
     <developerConnection>scm:git:git@github.com:jbosstm/narayana.git</developerConnection>
     <url>https://github.com/jbosstm/narayana</url>
   </scm>
+
   <issueManagement>
     <system>JIRA</system>
-    <url>https://jira.jboss.org/jira/browse/JBTM/</url>
+    <url>https://issues.redhat.come/browse/JBTM/</url>
   </issueManagement>
-  <distributionManagement>
-    <snapshotRepository>
-      <id>jboss-snapshots-repository</id>
-      <name>JBoss Snapshot Repository</name>
-      <url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
-    </snapshotRepository>
-  </distributionManagement>
+
   <properties>
-    <buildproperty.date>${maven.build.timestamp}</buildproperty.date>
-    <docbookVersion>1.79.1</docbookVersion>
-    <maven.build.timestamp.format>yyyy/MMM/dd HH:mm</maven.build.timestamp.format>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <version.maven-jdocbook-plugin>2.3.10</version.maven-jdocbook-plugin>
-    <version.org.jboss.pressgang>3.1.2</version.org.jboss.pressgang>
+    <org.asciidoctor.asciidoctor-maven-plugin>3.0.0</org.asciidoctor.asciidoctor-maven-plugin>
     <version.sortpom>3.2.0</version.sortpom>
   </properties>
+
   <repositories>
     <repository>
       <id>jboss-thirdparty-releases-repository</id>
@@ -158,91 +60,72 @@
       <url>https://repository.jboss.org/nexus/content/groups/public/</url>
     </pluginRepository>
   </pluginRepositories>
+
   <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.jboss.maven.plugins</groupId>
-          <artifactId>maven-jdocbook-plugin</artifactId>
-          <version>${version.maven-jdocbook-plugin}</version>
-          <extensions>true</extensions>
-          <configuration>
-            <sourceDirectory>${project.basedir}</sourceDirectory>
-            <sourceDocumentName>${docname}.xml</sourceDocumentName>
-            <masterTranslation>en-US</masterTranslation>
-            <imageResource>
-              <directory>${project.basedir}/en-US</directory>
-              <includes>
-                <include>images/*.png</include>
-              </includes>
-            </imageResource>
-            <formats>
-              <format>
-                <formatName>html_single</formatName>
-                <stylesheetResource>classpath:/xslt/org/jboss/pressgang/xhtml-single.xsl</stylesheetResource>
-                <finalName>index.html</finalName>
-              </format>
-            </formats>
-            <options>
-              <xmlTransformerType>saxon</xmlTransformerType>
-              <xincludeSupported>true</xincludeSupported>
-              <docbookVersion>${docbookVersion}</docbookVersion>
-              <useRelativeImageUris>true</useRelativeImageUris>
-            </options>
-          </configuration>
-          <dependencies>
-            <dependency>
-              <groupId>org.jboss.pressgang</groupId>
-              <artifactId>pressgang-xslt-ns</artifactId>
-              <version>${version.org.jboss.pressgang}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.jboss.pressgang</groupId>
-              <artifactId>pressgang-jdocbook-style</artifactId>
-              <version>${version.org.jboss.pressgang}</version>
-              <type>jdocbook-style</type>
-            </dependency>
-            <dependency>
-              <groupId>net.sf.docbook</groupId>
-              <artifactId>docbook-xsl</artifactId>
-              <version>1.79.1</version>
-              <type>pom</type>
-            </dependency>
-          </dependencies>
-        </plugin>
-        <plugin>
-          <groupId>com.github.ekryd.sortpom</groupId>
-          <artifactId>sortpom-maven-plugin</artifactId>
-          <version>${version.sortpom}</version>
-          <configuration>
-            <createBackupFile>false</createBackupFile>
-            <sortProperties>true</sortProperties>
-          </configuration>
-          <executions>
-            <execution>
-              <goals>
-                <goal>sort</goal>
-              </goals>
-              <phase>verify</phase>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.asciidoctor</groupId>
+        <artifactId>asciidoctor-maven-plugin</artifactId>
+        <version>${org.asciidoctor.asciidoctor-maven-plugin}</version>
+        <executions>
+          <execution>
+            <id>convert-to-html</id>
+            <goals>
+              <goal>process-asciidoc</goal>
+            </goals>
+            <phase>generate-resources</phase>
+            <configuration>
+              <backend>html5</backend>
+              <sourceDirectory>src/main/asciidoc</sourceDirectory>
+              <preserveDirectories>true</preserveDirectories>
+              <outputDirectory>${project.build.directory}/html</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>src/main/asciidoc/project/images</directory>
+                  <targetPath>project/images</targetPath>
+                </resource>
+                <resource>
+                  <directory>src/main/asciidoc/product/images</directory>
+                  <targetPath>product/images</targetPath>
+                </resource>
+              </resources>
+              <attributes>
+                <!-- should double check how should be used -->
+                <source-highlighter>coderay</source-highlighter>
+                <toc>left</toc>
+                <toclevel>2</toclevel>
+                <icons>font</icons>
+                <!-- should double check how should be used -->
+                <sectanchors>true</sectanchors>
+                <productSourceDir>${project.basedir}/src/main/asciidoc/product</productSourceDir>
+                <projectSourceDir>${project.basedir}/src/main/asciidoc/project</projectSourceDir>
+                <productName>Narayana</productName>
+                <!-- No sure if the following is correct -->
+                <parentProduct>Narayana</parentProduct>
+                <appServer>WildFly Application Server</appServer>
+              </attributes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>com.github.ekryd.sortpom</groupId>
+        <artifactId>sortpom-maven-plugin</artifactId>
+        <version>${version.sortpom}</version>
+        <configuration>
+          <createBackupFile>false</createBackupFile>
+          <sortProperties>true</sortProperties>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>sort</goal>
+            </goals>
+            <phase>verify</phase>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
-  <profiles>
-    <profile>
-      <id>release</id>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.jboss.maven.plugins</groupId>
-              <artifactId>maven-jdocbook-plugin</artifactId>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-    </profile>
-  </profiles>
+
 </project>
