--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright The Narayana Authors
-SPDX short identifier: Apache-2.0 -->
+<!--
+  Copyright The Narayana Authors
+  SPDX short identifier: Apache-2.0
+  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>org.jboss.narayana.documentation</groupId>
   <artifactId>narayana-documentation</artifactId>
-  <version>7.0.2.Final-SNAPSHOT</version>
+  <version>7.0.3.Final-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
   <description>${project.artifactId}</description>
-
+  <url>https://www.narayana.io/</url>
   <licenses>
     <license>
       <name>Apache-2.0</name>
@@ -18,23 +19,113 @@ SPDX short identifier: Apache-2.0 -->
       <distribution>repo</distribution>
     </license>
   </licenses>
-
+  <developers>
+    <developer>
+      <id>nmcl</id>
+      <name>Mark Little</name>
+      <email>mlittle@redhat.com</email>
+      <organization>JBoss</organization>
+      <organizationUrl>http://www.jboss.org/</organizationUrl>
+      <roles>
+        <role>JBoss CTO</role>
+      </roles>
+      <timezone>0</timezone>
+    </developer>
+    <developer>
+      <id>tomjenkinson</id>
+      <name>Tom Jenkinson</name>
+      <email>tom.jenkinson@redhat.com</email>
+      <organization>JBoss</organization>
+      <organizationUrl>http://www.jboss.org/</organizationUrl>
+      <roles>
+        <role>project lead</role>
+      </roles>
+      <timezone>0</timezone>
+    </developer>
+    <developer>
+      <id>paulrobinson</id>
+      <name>Paul Robinson</name>
+      <email>paul.robinson@redhat.com</email>
+      <organization>JBoss</organization>
+      <organizationUrl>http://www.jboss.org/</organizationUrl>
+      <roles>
+        <role>xts lead</role>
+      </roles>
+      <timezone>0</timezone>
+    </developer>
+    <developer>
+      <id>mmusgrov</id>
+      <name>Michael Musgrove</name>
+      <email>mmusgrov@redhat.com</email>
+      <organization>JBoss</organization>
+      <organizationUrl>http://www.jboss.org/</organizationUrl>
+      <roles>
+        <role>Core Developer</role>
+      </roles>
+      <timezone>0</timezone>
+    </developer>
+    <developer>
+      <id>zhfeng</id>
+      <name>Amos Feng</name>
+      <email>zfeng@redhat.com</email>
+      <organization>JBoss</organization>
+      <organizationUrl>http://www.jboss.org/</organizationUrl>
+      <roles>
+        <role>Core Developer</role>
+      </roles>
+      <timezone>0</timezone>
+    </developer>
+    <developer>
+      <id>istudens</id>
+      <name>Ivo Studensky</name>
+      <email>istudens@redhat.com</email>
+      <organization>JBoss</organization>
+      <organizationUrl>http://www.jboss.org/</organizationUrl>
+      <roles>
+        <role>QA lead</role>
+      </roles>
+      <timezone>0</timezone>
+    </developer>
+    <developer>
+      <id>jhalliday</id>
+      <name>Jonathan Halliday</name>
+      <email>jonathan.halliday@redhat.com</email>
+      <organization>JBoss</organization>
+      <organizationUrl>http://www.jboss.org/</organizationUrl>
+      <timezone>0</timezone>
+    </developer>
+    <developer>
+      <id>adinn</id>
+      <name>Andrew Dinn</name>
+      <email>adinn@redhat.com</email>
+      <organization>JBoss</organization>
+      <organizationUrl>http://www.jboss.org/</organizationUrl>
+      <timezone>0</timezone>
+    </developer>
+  </developers>
   <scm>
     <connection>scm:git:git@github.com:jbosstm/narayana.git</connection>
     <developerConnection>scm:git:git@github.com:jbosstm/narayana.git</developerConnection>
     <url>https://github.com/jbosstm/narayana</url>
   </scm>
-
   <issueManagement>
     <system>JIRA</system>
     <url>https://issues.redhat.come/browse/JBTM/</url>
   </issueManagement>
-
+  <distributionManagement>
+    <snapshotRepository>
+      <id>jboss-snapshots-repository</id>
+      <name>JBoss Snapshot Repository</name>
+      <url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
   <properties>
+    <buildproperty.date>${maven.build.timestamp}</buildproperty.date>
+    <maven.build.timestamp.format>yyyy/MMM/dd HH:mm</maven.build.timestamp.format>
     <org.asciidoctor.asciidoctor-maven-plugin>3.0.0</org.asciidoctor.asciidoctor-maven-plugin>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <version.sortpom>3.2.0</version.sortpom>
   </properties>
-
   <repositories>
     <repository>
       <id>jboss-thirdparty-releases-repository</id>
@@ -60,7 +151,6 @@ SPDX short identifier: Apache-2.0 -->
       <url>https://repository.jboss.org/nexus/content/groups/public/</url>
     </pluginRepository>
   </pluginRepositories>
-
   <build>
     <plugins>
       <plugin>
@@ -127,5 +217,4 @@ SPDX short identifier: Apache-2.0 -->
       </plugin>
     </plugins>
   </build>
-
 </project>
